Majorly streamlined and reduced redundancy of Backend